[package]
name = "forja-wasm-gui"
version = "0.1.0"
edition = "2021"
description = "Forja WASM GUI Runtime — renderiza interfaces Forja en un <canvas> HTML5"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "TextMetrics",
    "MouseEvent",
    "KeyboardEvent",
    "EventListener",
    "Window",
    "HtmlInputElement",
] }
forja = { path = "../.." }
serde_json = "1"

[features]
default = []

[package.metadata]
wasm-opt = false
